--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react_movies-list",
-  "homepage": ".",
+  "homepage": "https://ronyshchenko.github.io/react_movies-list",
   "version": "0.1.0",
   "private": true,
   "keywords": [],
