--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "bulma": "^0.8.0",
+    "classnames": "^2.2.6",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
