--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bulma": "^0.8.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
+    "props-type": "^1.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
