--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
   "author": "Mate Academy",
   "license": "GPL-3.0",
   "dependencies": {
-    "@types/node": "^12.20.18",
-    "@types/react": "^17.0.15",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^12.20.21",
+    "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "bulma": "^0.8.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "typescript": "^4.3.5"
+    "typescript": "^4.4.2"
   },
   "devDependencies": {
     "@mate-academy/eslint-config-react-typescript": "*",
-    "@mate-academy/students-ts-config": "*",
+    "@mate-academy/students-ts-config": "0.0.4",
     "@mate-academy/stylelint-config": "*",
     "eslint": "^7.32.0",
     "gh-pages": "^3.2.3",
@@ -41,8 +42,12 @@
     "extends": "react-app"
   },
   "lint-staged": {
-    "*.css": ["stylelint"],
-    "*.js": ["eslint"]
+    "*.css": [
+      "stylelint"
+    ],
+    "*.js": [
+      "eslint"
+    ]
   },
   "browserslist": {
     "production": [
