--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "Mate Academy",
   "license": "GPL-3.0",
   "dependencies": {
-    "@types/node": "^12.20.18",
-    "@types/react": "^17.0.15",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^12.20.20",
+    "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "bulma": "^0.8.0",
     "node-sass": "^6.0.1",
@@ -41,8 +42,12 @@
     "extends": "react-app"
   },
   "lint-staged": {
-    "*.css": ["stylelint"],
-    "*.js": ["eslint"]
+    "*.css": [
+      "stylelint"
+    ],
+    "*.js": [
+      "eslint"
+    ]
   },
   "browserslist": {
     "production": [
