--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.38.2",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
@@ -41,8 +42,12 @@
     "extends": "react-app"
   },
   "lint-staged": {
-    "*.css": ["stylelint"],
-    "*.js": ["eslint"]
+    "*.css": [
+      "stylelint"
+    ],
+    "*.js": [
+      "eslint"
+    ]
   },
   "browserslist": {
     "production": [
