--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
-  "extends": "@mate-academy/students-ts-config",
+  "extends": "@mate-academy/students-ts-config"
+  ,
   "include": [
     "src"
   ]
