--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^12.20.18",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/parser": "^4.33.0",
     "bulma": "^0.9.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -17,11 +18,12 @@
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@mate-academy/eslint-config": "^0.0.19",
+    "@mate-academy/eslint-config-react": "*",
     "@mate-academy/eslint-config-react-typescript": "*",
-    "@mate-academy/scripts": "^0.9.0",
+    "@mate-academy/scripts": "^0.9.14",
     "@mate-academy/students-ts-config": "*",
     "@mate-academy/stylelint-config": "*",
-    "@mate-academy/eslint-config-react": "*",
     "cypress": "^5.6.0",
     "eslint": "^7.32.0",
     "eslint-plugin-cypress": "^2.11.2",
@@ -37,7 +39,7 @@
     "start": "mate-scripts start",
     "build": "mate-scripts build",
     "test": "mate-scripts test",
-    "lint-js": "mate-scripts lint -j",
+    "lint-js": "eslint --ext .ts,.tsx ./src/",
     "lint-css": "mate-scripts lint -s",
     "lint": "npm run lint-js && npm run lint-css",
     "update": "mate-scripts update",
