--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mate-academy/scripts": "^0.9.14",
     "@mate-academy/students-ts-config": "*",
     "@mate-academy/stylelint-config": "*",
+    "concurrently": "^7.0.0",
     "cypress": "^5.6.0",
     "eslint": "^7.32.0",
     "eslint-plugin-cypress": "^2.11.2",
@@ -39,8 +40,7 @@
     "start": "mate-scripts start",
     "build": "mate-scripts build",
     "test": "mate-scripts test",
-    "lint-js": "eslint --ext .ts,.tsx ./src/",
-    "lint-css": "mate-scripts lint -s",
+    "lint-js": "mate-scripts lint -j",
     "lint": "npm run lint-js && npm run lint-css",
     "update": "mate-scripts update",
     "postinstall": "npm run update",
