--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "start": "mate-scripts start -l",
     "build": "mate-scripts build",
     "test": "mate-scripts test",
-    "lint-js": "mate-scripts lint --ext .ts, .tsx ./src/",
+    "lint-js": "mate-scripts lint -j",
     "lint-css": "mate-scripts lint -s",
     "lint": "npm run lint-js && npm run lint-css",
     "update": "mate-scripts update",
