--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Mate Academy",
   "license": "GPL-3.0",
   "dependencies": {
+    "@mate-academy/eslint-config-react-typescript": "*",
     "@cypress/react": "^5.12.4",
     "bulma": "^0.9.3",
     "react": "^17.0.2",
@@ -20,9 +21,9 @@
     "@mate-academy/scripts": "^1.2.3",
     "@mate-academy/students-ts-config": "*",
     "@mate-academy/stylelint-config": "*",
-    "@types/node": "^17.0.23",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
+    "@types/node": "^17.0.36",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.17",
     "cypress": "^9.5.3",
     "eslint": "^7.32.0",
     "eslint-plugin-cypress": "^2.11.2",
@@ -32,7 +33,7 @@
     "mochawesome-report-generator": "^6.2.0",
     "node-sass": "^6.0.1",
     "stylelint": "^13.13.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.7.2"
   },
   "scripts": {
     "start": "mate-scripts start -l",
