--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "bulma": "^0.9.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@cypress/webpack-dev-server": "^1.8.4",
     "@mate-academy/cypress-tools": "^1.0.4",
     "@mate-academy/eslint-config-react": "*",
-    "@mate-academy/eslint-config-react-typescript": "*",
+    "@mate-academy/eslint-config-react-typescript": "",
     "@mate-academy/scripts": "^1.2.3",
-    "@mate-academy/students-ts-config": "*",
-    "@mate-academy/stylelint-config": "*",
+    "@mate-academy/students-ts-config": "",
+    "@mate-academy/stylelint-config": "",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
@@ -31,7 +31,7 @@
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.0",
     "mochawesome-report-generator": "^6.2.0",
-    "node-sass": "^6.0.1",
+    "node-sass": "^7.0.1",
     "stylelint": "^13.13.1",
     "typescript": "^4.6.3"
   },
@@ -57,6 +57,12 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "@babel/env",
+      "@babel/react"
     ]
   },
   "mateAcademy": {
