--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "test": "mate-scripts test -l",
     "lint-js": "mate-scripts lint -j",
     "lint-css": "mate-scripts lint -s",
-    "lint": "npm run lint-js && npm run lint-css",
+    "lint": "npm run lint-js",
     "update": "mate-scripts update",
     "postinstall": "npm run update && cypress verify",
     "predeploy": "npm run build",
