--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react_movies-list",
-  "homepage": ".",
+  "homepage": "/dist/",
   "version": "0.1.0",
   "keywords": [],
   "author": "Mate Academy",
