--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mochawesome-merge": "^4.2.0",
     "mochawesome-report-generator": "^6.2.0",
     "node-sass": "^6.0.1",
+    "sass": "^1.59.3",
     "stylelint": "^13.13.1",
     "typescript": "^4.6.3"
   },
